# opengl_engine_udemy

./: CMakeLists.txt  README.md  build.sh  run_tests.sh
assets/materials/: bricks.mat  suzanne.mat
assets/shaders/: fragment.glsl  vertex.glsl
engine/: CMakeLists.txt  config.h.in
engine/source/: Application.cpp  Application.h  Engine.cpp  Engine.h  eng.h
engine/source/graphics/: GraphicsAPI.cpp  GraphicsAPI.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VertexLayout.h
engine/source/input/: InputManager.cpp  InputManager.h
engine/source/io/: FileSystem.cpp  FileSystem.h
engine/source/render/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderQueue.cpp  RenderQueue.h
engine/source/scene/: Component.cpp  Component.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h
engine/source/scene/components/: CameraComponent.cpp  CameraComponent.h  MeshComponent.cpp  MeshComponent.h  PlayerControllerComponent.cpp  PlayerControllerComponent.h
engine/tests/: CMakeLists.txt  GameObjectTest.cpp  InputManagerTest.cpp  SceneTest.cpp
source/: Game.cpp  Game.h  TestObject.cpp  TestObject.h  main.cpp
